Update FolderResources.java